<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/LoginTheme">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/string_login"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:ems="15"
            android:hint="@string/input_name"
            android:inputType="textPersonName"
            android:minLines="2"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:ems="15"
            android:hint="@string/string_password"
            android:inputType="textPassword"
            android:minLines="2"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/singnbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="@string/signin"
            android:textColor="@color/colorBlack"
            android:background="@drawable/buttom_shape"
            />

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:textSize="18dp"

            />
    </LinearLayout>
</LinearLayout>