<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/countString"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:text="@string/People"
            android:textSize="25dp"/>
        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn_people_m"
            android:text="-"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="20dp"
            android:id="@+id/textViewCountPeople"/>
        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn_people_p"
            android:text="+"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:text="@string/Children"
            android:textSize="25dp"/>
        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn_children_m"
            android:text="-"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="20dp"
            android:id="@+id/textViewCountChildren"/>
        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/btn_children_p"
            android:text="+"
            />
    </LinearLayout>

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_count"
        android:text="@string/countBtn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

</LinearLayout>